# mcpverse-cli

./: .gitignore  LICENSE  README.md  homebrew-formula.rb  install.sh  mcpverse.rb  pyproject.toml
mcpverse/: authentication.py  cli.py  stdio_proxy.py
