[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpverse"
version = "1.0.2"
description = "MCP CLI tool"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "MCP Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "requests>=2.32.3",
    "mcp>=1.6.0"
]

[project.scripts]
mcpverse = "mcpverse.cli:main"
mcpv = "mcpverse.cli:main"
